# chip-8-emulator

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Makefile  README.md  imgui.ini
src/: chip8.cpp  chip8.hpp  gui.cpp  gui.hpp  gui_debugger.hpp  main.cpp  types.hpp  utils.hpp
